--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_UploadCaseDoc.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_UploadCaseDoc.cshtml
@@ -29,6 +29,63 @@
     <input type="hidden" asp-for="CaseId" />
     <select style="display:none" id="dynamicdata"></select>
     <fieldset class="scheduler-border">
+        <legend class="scheduler-border">Case Detail Information</legend>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group row">
+                    <label class="col-md-2 col-form-label">@localizer["Court"]</label>
+                    <label class="col-md-4 col-form-label">@localizer[Model.Court]</label>
+                    <label class="col-md-2 col-form-label">@localizer["Case No/Year"]</label>
+                    <label class="col-md-4 col-form-label"> @localizer[Model.CaseNoYear]</label>
+                </div>
+                <div class="form-group row">
+                    <label class="col-md-2 col-form-label">@localizer["Case Title"]</label>
+                    <label class="col-md-10 col-form-label">@localizer[Model.Title]</label>
+                </div>
+            </div>
+        </div>
+    </fieldset>
+
+    <fieldset class="scheduler-border">
+        <legend class="scheduler-border">Case Attached Documents Information</legend>
+
+        <table id="tblCaseHistory" class="table table-striped" width="100%" cellspacing="0" style="border: 1px solid #ddd; border-collapse: collapse;">
+            <thead>
+                <tr style="border: 1px solid #ddd;">
+                    <th style="border: 1px solid #ddd; padding: 8px;">Sno.</th>
+                    <th style="border: 1px solid #ddd; padding: 8px;">Type</th>
+                    <th style="border: 1px solid #ddd; padding: 8px;">Date</th>
+                    <th style="border: 1px solid #ddd; padding: 8px;">Name</th>
+                    <th style="border: 1px solid #ddd; padding: 8px;"></th>
+                </tr>
+            </thead>
+            <tbody>
+                @for (int i = 0; i < Model.Docs.Count(); i++)
+                {
+                    <tr style="border: 1px solid #ddd;">
+                        <td style="border: 1px solid #ddd; padding: 8px;">@(i + 1)</td>
+                        <td style="border: 1px solid #ddd; padding: 8px;">@Model.Docs[i].DocType </td>
+                        <td style="border: 1px solid #ddd; padding: 8px;">@Model.Docs[i].DocDate</td>
+                        <td style="border: 1px solid #ddd; padding: 8px;">@Model.Docs[i].DocName</td>
+                        <td style="border: 1px solid #ddd; padding: 8px;">
+                            <p>
+                                <a href="~/@Model.Docs[i].DocFilePath" target="_blank">
+                                    <i style="font-size:20px" class="@Model.Docs[i].FIcon"></i>
+                                </a> |
+                                <a href="javascript:void(0);" onclick="ConfirmDelete('@Model.Docs[i].Id','@Model.Docs[i].DocFilePath')">
+                                    <i style="font-size:20px" class="fa">&#xf00d;</i>
+                                </a>
+                            </p>
+
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </fieldset>
+    <hr />
+
+    <fieldset class="scheduler-border">
         <legend class="scheduler-border">Document Upload</legend>
         <div class="col-md-12">
             <div class="row">
@@ -55,17 +112,46 @@
     </div>
 </form>
 <script type="text/javascript" language=javascript>
-    $.validator.unobtrusive.parse(document);
-    $(document).ready(function () {        
-        BindType('dynamicdata');        
-        $(document).on("change", ".doctypechange", function () {       
+   
+    $(document).ready(function () {
+        BindType('dynamicdata');
+        console.log(typeof ConfirmDelete);
+        $(document).on("change", ".doctypechange", function () {
             var id = $(this).attr('id').split("_")[1];
             BindDocument('Documents_' + id + '__DocId', $("#Documents_" + id + "__TypeId").val());
         });
     });
+     function ConfirmDelete(DocId,fpath)
+        {
+            Swal.fire({
+            title: "Are you sure?",
+            text: "Do you want to delete the file: " + fpath + "?",
+            icon: "warning",
+            showCancelButton: true,
+            confirmButtonColor: "#d33",
+            cancelButtonColor: "#3085d6",
+            confirmButtonText: "Yes, delete it!"
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    deleteFile(DocId,fpath);
+                }
+            });
+        };
 
-    // var btn_delete = '<button type="button" onclick="removeKolom($(this))" class="btn btn-warning"><i class="fa fa-trash" aria-hidden="true"></i></button>';
-    // var btn_add = '<button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>';
+        function deleteFile(fileId,fpath) {
+            fetch("/Litigation/CaseManage/DeleteDoc?id="+fileId+"&fPath="+fpath, {
+                method: 'POST'
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    Swal.fire("Deleted!", "Your file has been deleted.", "success")
+                        .then(() => location.reload());
+                } else {
+                    Swal.fire("Error!", "Something went wrong.", "error");
+                }
+            });
+        };
 
     function removeKolom(id) {
         debugger;
