--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_UploadCaseDoc.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_UploadCaseDoc.cshtml
@@ -21,12 +21,14 @@
         padding: 0 10px;
         border-bottom: none;
     }
+
     .custom-file-input {
         opacity: 1 !important;
     }
 </style>
 <form id="create-form" method="post" asp-controller="CaseManage" asp-action="UploadCaseDocs" enctype="multipart/form-data">
     <input type="hidden" asp-for="CaseId" />
+    <input type="hidden" asp-for="Where" />
     <select style="display:none" id="dynamicdata"></select>
     <fieldset class="scheduler-border">
         <legend class="scheduler-border">Case Detail Information</legend>
@@ -89,7 +91,7 @@
         <legend class="scheduler-border">Document Upload</legend>
         <div class="col-md-12">
             <div class="row">
-                
+
                 <table id="tblDocs" border="1" style="width:100%!important">
                     <thead>
                         <tr>
@@ -100,7 +102,7 @@
                             <th width="10%"></th>
                         </tr>
                     </thead>
-                    <tbody class="data-repeater">                       
+                    <tbody class="data-repeater">
                     </tbody>
                 </table>
             </div>
@@ -112,7 +114,7 @@
     </div>
 </form>
 <script type="text/javascript" language=javascript>
-   
+
     $(document).ready(function () {
         BindType('dynamicdata');
         console.log(typeof ConfirmDelete);
@@ -138,7 +140,7 @@
             });
         };
 
-        function deleteFile(fileId,fpath) {
+     function deleteFile(fileId,fpath) {
             fetch("/Litigation/CaseManage/DeleteDoc?id="+fileId+"&fPath="+fpath, {
                 method: 'POST'
             })
@@ -210,9 +212,9 @@
             incval++;
         } else {
             alert("Please select all the fileds are required");
-        }      
+        }
     }
-    
+
     function BindType(ddl) {
         $.getJSON("/Litigation/casemanage/DOCTypes", function (data) {
             $("#" + ddl).empty();;
@@ -228,9 +230,9 @@
         //         return m;
         //     }
         // });
-       
+
     }
-    function BindDocument(ddl,v) {        
+    function BindDocument(ddl,v) {
         $("#" + ddl).empty();
         $.getJSON("/Litigation/casemanage/DdlDOTypes?TypeId=" + v, function (data) {
             $.each(data.Data, function (i, item) {
