--- a/CourtApp.Web/Areas/Litigation/Views/Hearing/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/Hearing/_ViewAll.cshtml
@@ -2,10 +2,12 @@
 
 <div class="card">
     <div id="viewAll" class="card-body table-responsive">
-        <form asp-controller="Hearing" method="post" asp-action="AssignWorkCase" class="d-inline" return=jQueryModalGet(this)>
+        <form asp-controller="Hearing" method="post" asp-action="AssignWorkCase"
+              class="d-inline" return=jQueryModalGet(this)>
             <div class="row">
                 <div class="col-md-12">
-                    <table id="tblTHearingCaseDetail" class="table table-striped" width="100%" cellspacing="0">
+                    <table id="tblTHearingCaseDetail" class="table table-striped"
+                           width="100%" cellspacing="0">
                         <thead>
                             <tr>
                                 <th>Sno.</th>
@@ -83,7 +85,7 @@
         $('#tblTHearingCaseDetail').DataTable({
             language: {"emptyTable": "There are no pending works!"},
             dom: 'Bfrtip',// B (buttons), f (filter), t (table), p (pagination)
-            buttons:[                    
+            buttons:[
                     {
                         extend: 'excelHtml5',
                         text: 'Export',
@@ -95,8 +97,33 @@
                         exportOptions: {
                             columns: [0,1,2,3,4,5,6]
                         }
-                    }
-            ]
-        });
+                    },
+                    {
+                        text: 'Update Common Proceeding',
+                        action: function (e, dt, node, config) {
+                            debugger;
+                                var selectedCaseIds = [];
+                                // Find all checked checkboxes in the table and collect their associated CaseId
+                                $("#tblTHearingCaseDetail tbody input[type='checkbox']:checked").each(function () {
+                                        var caseId = $(this).closest("tr").find("input[type='hidden']").val();
+                                        if (caseId) {
+                                        selectedCaseIds.push(caseId);
+                                        }
+                                });
+
+                                if (selectedCaseIds.length === 0) {
+                                    Swal.fire("Error!", "Please select at least one case.", "error");
+                                    return;
+                                }
+
+                                // Convert selectedCaseIds array to a comma-separated string
+                                var caseIdsString = selectedCaseIds.join(',');
+
+                                // Call modal with the selected CaseIds
+                                    jQueryModalGet('/Litigation/hearing/BulkProceeding?CaseIds=' + caseIdsString, 'Case Proceedings');
+
+                                }
+                    }]
+            });
     });
 </script>
