--- a/CourtApp.Web/Views/Shared/Components/Sidebar/Default.cshtml
+++ b/CourtApp.Web/Views/Shared/Components/Sidebar/Default.cshtml
@@ -43,6 +43,13 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a is-active-route asp-area="LawyerDiary" asp-controller="Lawyer" asp-action="index" class="nav-link">
+                                        <i class="fa fa-gavel nav-icon"></i>
+                                        <p>@localizer["Lawyer Directory"]</p>
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
                                     <a is-active-route asp-area="Admin" asp-controller="Role" asp-action="index" class="nav-link">
                                         <i class="far fa-user-circle nav-icon"></i>
                                         <p>@localizer["Roles"]</p>
@@ -56,7 +63,7 @@
                                 </li>
                                 <li class="nav-item">
                                     <a is-active-route asp-area="Admin" asp-controller="TemplateBuilder" asp-action="index" class="nav-link">
-                                        <i class="fa fa-file-archive-o" aria-hidden="true"></i>
+                                        <i class="fa fa-file-archive-o nav-icon"></i>
                                         <p>@localizer["Template Design"]</p>
                                     </a>
                                 </li>
@@ -69,13 +76,7 @@
                                         <i class="fa fa-user nav-icon" aria-hidden="true"></i>
                                         <p>@localizer["Client"]</p>
                                     </a>
-                                </li>
-                                @*  <li class="nav-item">
-                                <a is-active-route asp-area="LawyerDiary" asp-controller="Lawyer" asp-action="index" class="nav-link">
-                                    <i class="fa fa-gavel" aria-hidden="true"></i>
-                                    <p>@localizer["Lawyer"]</p>
-                                </a>
-                            </li> *@
+                                </li>                                
                                 <li class="nav-item">
                                     <a is-active-route asp-area="Admin" asp-controller="User" asp-action="index"
                                        class="nav-link">
