--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateOrEdit.cshtml
@@ -27,8 +27,7 @@
     <div class="col-sm-12" style="padding:20px">
         <partial name="_StatusMessage" model="Model.StatusMessage" />
         <form id="frmCaseManage" method="post" asp-controller="CaseManage"
-              asp-action="OnPostCreateOrEdit" asp-route-Id="@Model.Id" 
-              >
+              asp-action="OnPostCreateOrEdit" asp-route-Id="@Model.Id">
             <input type="hidden" asp-for="@Model.LCaseId" />
             <div class="row">
                 <div class="col-md-12">
@@ -42,14 +41,7 @@
                                 </select>
                             </div>
                             <span asp-validation-for="ClientId" class="text-danger"></span>
-                        </div>
-                        @* <div class="col-md-1">
-                            <div class="input-group">
-                                <a onclick="jQueryModalGet('/litigation/casemanage/OnCreateClientInfo','Add Client')" class="btn btn-outline-success">
-                                    <i class="fa fa-plus-square"></i> &nbsp;Add
-                                </a>
-                            </div>
-                        </div> *@
+                        </div>                        
                         <label class="col-md-2 col-form-label">@localizer["Institution Date"] (<span style="color:red">*</span>)</label>
                         <div class="col-md-4">
                             <div class="input-group">
