--- a/CourtApp.Web/Views/Shared/_Scripts.cshtml
+++ b/CourtApp.Web/Views/Shared/_Scripts.cshtml
@@ -22,6 +22,9 @@
 <script src="~/assets/ckeditor/ckeditor.js"></script>
 <script src="~/js/adminlte.js"></script>
 <script src="~/js/sweetalert2.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="~/js/site.js"></script>
+
+
 
 
