--- a/CourtApp.Web/Views/Shared/_Styles.cshtml
+++ b/CourtApp.Web/Views/Shared/_Styles.cshtml
@@ -25,3 +25,4 @@
 <link href="~/css/site.css" rel="stylesheet" />
 <!-- DataTables Buttons extension CSS -->
 @* <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/2.3.0/css/buttons.dataTables.min.css"> *@
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
