--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/GetCaseDetail.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/GetCaseDetail.cshtml
@@ -4,6 +4,9 @@
         display: none
     }
 
+    .text-capitalize {
+        text-transform: capitalize;
+    }
     fieldset.scheduler-border {
         border: 1px groove #ddd !important;
         padding: 0 1.4em 1.4em 1.4em !important;
@@ -135,13 +138,13 @@
     </dl>
 
     <dl class="row">
-        <dt class="col-sm-2">
+        <dt class="col-sm-2 text-capitalize">
             @Html.DisplayNameFor(model => model.FirstTitle)
         </dt>
         <dd class="col-sm-4">
             @Html.DisplayFor(model => model.FirstTitle)
         </dd>
-        <dt class="col-sm-2">
+        <dt class="col-sm-2 text-capitalize">
             @Html.DisplayNameFor(model => model.FirstTitleDetail)
         </dt>
         <dd class="col-sm-4">
@@ -150,13 +153,13 @@
     </dl>
 
     <dl class="row">
-        <dt class="col-sm-2">
+        <dt class="col-sm-2 text-capitalize">
             @Html.DisplayNameFor(model => model.SecondTitle)
         </dt>
         <dd class="col-sm-4">
             @Html.DisplayFor(model => model.SecondTitle)
         </dd>
-        <dt class="col-sm-2">
+        <dt class="col-sm-2 text-capitalize">
             @Html.DisplayNameFor(model => model.SecondTitleDetail)
         </dt>
         <dd class="col-sm-4">
