--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/GetCaseDetail.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/GetCaseDetail.cshtml
@@ -358,6 +358,14 @@
                 @Html.DisplayFor(model => model.ClientDetail.Address)
             </dd>
         </dl>
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ClientDetail.Appearence)
+            </dt>
+            <dd class="col-sm-4">
+                @Html.DisplayFor(model => model.ClientDetail.Appearence)
+            </dd>
+        </dl>
     </fieldset>
 }
 
