--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ClientInfoDetail.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ClientInfoDetail.cshtml
@@ -75,12 +75,12 @@
                 <div class="col-md-4">
                     <input type="text" placeholder="Please referals name" asp-for="ReferalBy" class="form-control" />
                 </div>
-                <label class="col-md-2 col-form-label">Appearance</label>
+                @* <label class="col-md-2 col-form-label">Appearance</label>
                 <div class="col-md-4">
                     <select class="form-control select2bs4" asp-for="AppearenceID" asp-items="@Model.Appearences">
                         <option></option>
                     </select>
-                </div>
+                </div> *@
             </div>
         </div>
     </div>
