--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateCaseClient.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateCaseClient.cshtml
@@ -76,14 +76,14 @@
                            asp-for="ReferalBy" class="form-control" />
                     <span asp-validation-for="ReferalBy" class="text-danger"></span>
                 </div>
-                <label class="col-md-2 col-form-label">@localizer["Appearance"] (<span style="color:red">*</span>)</label>
+                @* <label class="col-md-2 col-form-label">@localizer["Appearance"] (<span style="color:red">*</span>)</label>
                 <div class="col-md-4">
                     <select class="form-control select2bs4" asp-for="AppearenceID"
                             asp-items="@Model.Appearences">
                         <option></option>
                     </select>
                     <span asp-validation-for="AppearenceID" class="text-danger"></span>
-                </div>
+                </div> *@
             </div>
         </div>
     </div>
